--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -55,10 +55,11 @@
 .project-list-link {
     display: block;
     transition: box-shadow var(--transition);
+
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
-.project-list-link:hover,
-.project-list-link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
