--- a/sass/components/_modal-button.scss
+++ b/sass/components/_modal-button.scss
@@ -20,9 +20,9 @@
     border-radius: 4px;
     min-width: 200px;
     transition: background-color var(--transition);
-}
 
-.modal-button:hover,
-.modal-button:focus {
-    background-color: #188CE8;
+    &:hover,
+    &:focus {
+        background-color: #188CE8;
+    }
 }
