--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -41,23 +41,26 @@
     letter-spacing: 0.02em;
     position: relative;
     transition: color var(--transition);
+
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
 
-.nav-list-link:hover,
-.nav-list-link:focus,
 .active-page {
     color: var(--accent-color);
-}
-
-.active-page::after {
-    display: block;
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--accent-color);
-    bottom: -1px;
+    
+    &::after {
+        display: block;
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--accent-color);
+        bottom: -1px;
+    }
 }
 
 .contact-list {
