--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -12,10 +12,10 @@
     background-color: #f5f4fa;
 }
 
-.advantages-tittle {
+.advantages__tittle {
     color: var(--secondary-text-color-theme-light);
 }
 
-.advantages-description {
+.advantages__description {
     font-style: normal;
 }
