--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,11 +6,19 @@
     line-height: 1.19;
     color: var(--accent-color);
 }
-
-.header-logo-part {
+.header__logo {
+    margin-right: 92px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+.header__logo_part {
     color: var(--secondary-text-color-theme-light);
 }
 
+.footer-logo {
+    display: block;
+    margin-bottom: 20px;
+}
 .footer-logo-part {
     color: var(--primary-text-color-theme-dark);
 }
