--- a/css/main.css
+++ b/css/main.css
@@ -482,11 +482,11 @@ address {
   background-color: #f5f4fa;
 }
 
-.advantages-tittle {
+.advantages__tittle {
   color: var(--secondary-text-color-theme-light);
 }
 
-.advantages-description {
+.advantages__description {
   font-style: normal;
 }
 
@@ -579,8 +579,7 @@ address {
   margin-bottom: 9px;
 }
 
-.address-place:hover,
-.address-place:focus {
+.address-place:hover, .address-place:focus {
   color: var(--accent-color);
 }
 
@@ -669,8 +668,13 @@ address {
   transition: background-color var(--transition), color var(--transition), box-shadow var(--transition);
 }
 
-.portfolio-button-filter:hover,
-.portfolio-button-filter:focus,
+.portfolio-button-filter:hover, .portfolio-button-filter:focus,
+.portfolio-button-filter .active {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  background-color: var(--accent-color);
+  color: var(--primary-text-color-theme-dark);
+}
+
 .active {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   background-color: var(--accent-color);
@@ -702,6 +706,15 @@ address {
   transition: transform var(--transition);
 }
 
+.project-list-link {
+  display: block;
+  transition: box-shadow var(--transition);
+}
+
+.project-list-link:hover, .project-list-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .project-list-link:hover .project-overlay-description,
 .project-list-link:focus .project-overlay-description {
   transform: translateY(0%);
@@ -729,14 +742,5 @@ address {
   font-style: normal;
   font-size: 16px;
   line-height: 1.88;
-}
-
-.project-list-link {
-  display: block;
-  transition: box-shadow var(--transition);
-}
-
-.project-list-link:hover, .project-list-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 /*# sourceMappingURL=main.css.map */
