--- a/sass/layout/_portfolio-filters.scss
+++ b/sass/layout/_portfolio-filters.scss
@@ -22,10 +22,17 @@
     border: none;
     transition: background-color var(--transition),
     color var(--transition), box-shadow var(--transition);
+
+    &:hover,
+    &:focus,
+    .active {
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+        background-color: var(--accent-color);
+        color: var(--primary-text-color-theme-dark);
+    }
 }
 
-.portfolio-button-filter:hover,
-.portfolio-button-filter:focus,
 .active {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
